--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -12,7 +12,7 @@
     <a href="/managebranch">Add branch</a><br>
     <a href="/viewdivision">Add division</a><br>
     <a href="/viewstaff">Add staff</a><br>
-    <a href="/viewcase">Cases</a><br>
+    <a href="/viewcasecbi">Cases</a><br>
     <a href="/viewcomplaints">Complaints</a><br>
     <a href="/sendreply">send Reply</a><br>
 
