--- a/templates/viewdivision.html
+++ b/templates/viewdivision.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,8 +12,19 @@
     <form action="" method="post">
         <table>
             <tr>
-                <th>Start date</th>
+                <th>Division</th>
+                
                 <td><input type="text" name="division" value="{{data['viewdivision'][0]['division_name']}}"></td>
+            </tr>
+            <tr>
+                <th>Branch</th>
+                
+                <td><select name="br" id="">
+                    <option value="">{{data['viewdivision'][0]['branch_name']}}</option>
+                    {% for i in data['brview']%}
+                    <option value="{{i['branch_id']}}">{{i['branch_name']}}</option>
+                    {% endfor %}
+                </select></td>
             </tr>
             <tr>
                 <input type="submit" name="update" value="update">
@@ -75,5 +86,229 @@
     </table>
 
 {% endif %}
+</body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,700,300,100);
+
+body {
+  background-color: #3e94ec;
+  font-family: "Roboto", helvetica, arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  text-rendering: optimizeLegibility;
+}
+
+div.table-title {
+   display: block;
+  margin: auto;
+  max-width: 600px;
+  padding:5px;
+  width: 100%;
+}
+
+.table-title h3 {
+   color: #fafafa;
+   font-size: 30px;
+   font-weight: 400;
+   font-style:normal;
+   font-family: "Roboto", helvetica, arial, sans-serif;
+   text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+   text-transform:uppercase;
+}
+
+
+/*** Table Styles **/
+
+.table-fill {
+  background: white;
+  border-radius:3px;
+  border-collapse: collapse;
+  height: 320px;
+  margin: auto;
+  max-width: 600px;
+  padding:5px;
+  width: 100%;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  animation: float 5s infinite;
+}
+ 
+th {
+  color:#D5DDE5;;
+  background:#1b1e24;
+  border-bottom:4px solid #9ea7af;
+  border-right: 1px solid #343a45;
+  font-size:23px;
+  font-weight: 100;
+  padding:24px;
+  text-align:left;
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  vertical-align:middle;
+}
+
+th:first-child {
+  border-top-left-radius:3px;
+}
+ 
+th:last-child {
+  border-top-right-radius:3px;
+  border-right:none;
+}
+  
+tr {
+  border-top: 1px solid #C1C3D1;
+  border-bottom-: 1px solid #C1C3D1;
+  color:#666B85;
+  font-size:16px;
+  font-weight:normal;
+  text-shadow: 0 1px 1px rgba(256, 256, 256, 0.1);
+}
+ 
+tr:hover td {
+  background:#4E5066;
+  color:#FFFFFF;
+  border-top: 1px solid #22262e;
+}
+ 
+tr:first-child {
+  border-top:none;
+}
+
+tr:last-child {
+  border-bottom:none;
+}
+ 
+tr:nth-child(odd) td {
+  background:#EBEBEB;
+}
+ 
+tr:nth-child(odd):hover td {
+  background:#4E5066;
+}
+
+tr:last-child td:first-child {
+  border-bottom-left-radius:3px;
+}
+ 
+tr:last-child td:last-child {
+  border-bottom-right-radius:3px;
+}
+ 
+td {
+  background:#FFFFFF;
+  padding:20px;
+  text-align:left;
+  vertical-align:middle;
+  font-weight:300;
+  font-size:18px;
+  text-shadow: -1px -1px 1px rgba(0, 0, 0, 0.1);
+  border-right: 1px solid #C1C3D1;
+}
+
+td:last-child {
+  border-right: 0px;
+}
+
+th.text-left {
+  text-align: left;
+}
+
+th.text-center {
+  text-align: center;
+}
+
+th.text-right {
+  text-align: right;
+}
+
+td.text-left {
+  text-align: left;
+}
+
+td.text-center {
+  text-align: center;
+}
+
+td.text-right {
+  text-align: right;
+}
+
+    </style>
+</head>
+<body>
+    <html lang="en">
+<head>
+	<meta charset="utf-8" />
+	<title>Table Style</title>
+	<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0; width=device-width;">
+</head>
+
+<body>
+    {%if data['up']%}
+    <h1>UPDATE SCHEDULE</h1>
+    <form action="" method="post">
+        <table>
+            <tr>
+                <th>Division</th>
+                
+                <td><input type="text" name="division" value="{{data['viewdivision'][0]['division_name']}}"></td>
+            </tr>
+            <tr>
+                <th>Branch</th>
+                
+                <td><select name="br" id="">
+                    <option value="">{{data['viewdivision'][0]['branch_name']}}</option>
+                    {% for i in data['brview']%}
+                    <option value="{{i['branch_id']}}">{{i['branch_name']}}</option>
+                    {% endfor %}
+                </select></td>
+            </tr>
+            <tr>
+                <input type="submit" name="update" value="update">
+            </tr>
+            
+        </table>
+
+    </form>
+
+
+    {%else%}
+<div class="table-title">
+<h3>Data Table</h3>
+<h3 align="center"> <a href="/adddivision">Add Branch</a></h3>
+</div>
+<table class="table-fill">
+<thead>
+<tr>
+<th class="text-left">Division</th>
+<th class="text-left">Branch</th>
+
+<th colspan="2" class="text-left">Edit</th>
+
+</tr>
+</thead>
+<tbody class="table-hover">
+    {% for i in data['viewdivision'] %}
+<tr>
+<td class="text-left">{{i['division_name']}}</td>
+<td class="text-left">{{i['branch_name']}}</td>
+<td><a href="?action=update&id={{i['d_id']}}">Update</a></td>
+<td><a href="?action=delete&id={{i['d_id']}}">delete</a></td>
+</tr>
+{% endfor %}
+
+</tbody>
+</table>
+  
+
+ {% endif %}
 </body>
 </html>
